y.output
Terminals unused in grammar

   khaali
   MUL
   DIV
   MOD
   PLS
   MIS


Grammar

    0 $accept: start $end

    1 start: markazi LRP RRP COMPOUNDSTATEMENT

    2 ASSIGNMENTOPERATORS: EA
    3                    | MA
    4                    | DA
    5                    | AA
    6                    | SA

    7 RELATIONALOPERATORS: GT
    8                    | LT
    9                    | GTE
   10                    | LTE
   11                    | IEQ
   12                    | NEQ

   13 LOGICALOPERATORS: AND
   14                 | OR

   15 NOTOPERATOR: NOT

   16 INCDECOPERATORS: INO
   17                | DCO

   18 BOOLTYPE: booliyayi

   19 BOOLOPTIONS: sahih
   20            | ghalat

   21 FLOATTYPE: aasharia

   22 NUMBERTYPE: hindsa
   23           | chindsa
   24           | bhindsa

   25 STRINGTYPE: jumla

   26 NUMBERS: integer
   27        | decimal

   28 COMPOUNDSTATEMENT: LCP MULTIDECLARATION MULTISTATEMENT RCP

   29 MULTIDECLARATION: DECLARATION MULTIDECLARATION
   30                 | DECLARATION

   31 MULTISTATEMENT: STATEMENT MULTISTATEMENT
   32               | STATEMENT

   33 DECLARATION: NUMBERTYPE identifier semicolon
   34            | STRINGTYPE identifier semicolon
   35            | FLOATTYPE identifier semicolon
   36            | NUMBERTYPE identifier EA integer semicolon
   37            | STRINGTYPE identifier EA stringliteral semicolon
   38            | FLOATTYPE identifier EA decimal semicolon
   39            | BOOLTYPE identifier EA BOOLOPTIONS semicolon

   40 STATEMENT: EXPRESSIONSTATEMENT
   41          | SELECTIONSTATEMENT
   42          | ITERATIONSTATEMENT
   43          | PRINTSTATEMENT

   44 PRINTSTATEMENT: likho LRP stringliteral RRP
   45               | likho LRP stringliteral comma identifier RRP

   46 SELECTIONSTATEMENT: IFSTATEMENT ELSEIFSTATEMENT ELSESTATEMENT

   47 IFSTATEMENT: agar LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT

   48 ELSEIFSTATEMENT: agarwarna LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT
   49                | %empty

   50 ELSESTATEMENT: warna COMPOUNDSTATEMENT
   51              | %empty

   52 ITERATIONSTATEMENT: jabtak LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT
   53                   | chalo LRP integer se integer RRP COMPOUNDSTATEMENT

   54 LOGICALEXPRESSION: LRP RELATIONALEXPRESSION RRP LOGICALOPERATORS LRP RELATIONALEXPRESSION RRP
   55                  | NOTOPERATOR LRP RELATIONALEXPRESSION RRP
   56                  | RELATIONALEXPRESSION

   57 RELATIONALEXPRESSION: identifier RELATIONALOPERATORS integer
   58                     | integer RELATIONALOPERATORS integer
   59                     | BOOLOPTIONS

   60 EXPRESSIONSTATEMENT: identifier ASSIGNMENTOPERATORS identifier semicolon
   61                    | identifier ASSIGNMENTOPERATORS NUMBERS semicolon
   62                    | identifier INCDECOPERATORS semicolon
   63                    | INCDECOPERATORS identifier semicolon


Terminals, with rules where they appear

$end (0) 0
error (256)
markazi (258) 1
se (259) 53
chalo (260) 53
jabtak (261) 52
agar (262) 47
agarwarna (263) 48
warna (264) 50
likho (265) 44 45
hindsa (266) 22
chindsa (267) 23
bhindsa (268) 24
jumla (269) 25
booliyayi (270) 18
aasharia (271) 21
khaali (272)
sahih (273) 19
ghalat (274) 20
stringliteral (275) 37 44 45
identifier (276) 33 34 35 36 37 38 39 45 57 60 61 62 63
decimal (277) 27 38
integer (278) 26 36 53 57 58
comma (279) 45
semicolon (280) 33 34 35 36 37 38 39 60 61 62 63
LRP (281) 1 44 45 47 48 52 53 54 55
RRP (282) 1 44 45 47 48 52 53 54 55
LCP (283) 28
RCP (284) 28
INO (285) 16
DCO (286) 17
MUL (287)
DIV (288)
MOD (289)
PLS (290)
MIS (291)
LT (292) 8
LTE (293) 10
GT (294) 7
GTE (295) 9
IEQ (296) 11
NEQ (297) 12
NOT (298) 15
AND (299) 13
OR (300) 14
EA (301) 2 36 37 38 39
AA (302) 5
SA (303) 6
MA (304) 3
DA (305) 4


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
start (52)
    on left: 1, on right: 0
ASSIGNMENTOPERATORS (53)
    on left: 2 3 4 5 6, on right: 60 61
RELATIONALOPERATORS (54)
    on left: 7 8 9 10 11 12, on right: 57 58
LOGICALOPERATORS (55)
    on left: 13 14, on right: 54
NOTOPERATOR (56)
    on left: 15, on right: 55
INCDECOPERATORS (57)
    on left: 16 17, on right: 62 63
BOOLTYPE (58)
    on left: 18, on right: 39
BOOLOPTIONS (59)
    on left: 19 20, on right: 39 59
FLOATTYPE (60)
    on left: 21, on right: 35 38
NUMBERTYPE (61)
    on left: 22 23 24, on right: 33 36
STRINGTYPE (62)
    on left: 25, on right: 34 37
NUMBERS (63)
    on left: 26 27, on right: 61
COMPOUNDSTATEMENT (64)
    on left: 28, on right: 1 47 48 50 52 53
MULTIDECLARATION (65)
    on left: 29 30, on right: 28 29
MULTISTATEMENT (66)
    on left: 31 32, on right: 28 31
DECLARATION (67)
    on left: 33 34 35 36 37 38 39, on right: 29 30
STATEMENT (68)
    on left: 40 41 42 43, on right: 31 32
PRINTSTATEMENT (69)
    on left: 44 45, on right: 43
SELECTIONSTATEMENT (70)
    on left: 46, on right: 41
IFSTATEMENT (71)
    on left: 47, on right: 46
ELSEIFSTATEMENT (72)
    on left: 48 49, on right: 46
ELSESTATEMENT (73)
    on left: 50 51, on right: 46
ITERATIONSTATEMENT (74)
    on left: 52 53, on right: 42
LOGICALEXPRESSION (75)
    on left: 54 55 56, on right: 47 48 52
RELATIONALEXPRESSION (76)
    on left: 57 58 59, on right: 54 55 56
EXPRESSIONSTATEMENT (77)
    on left: 60 61 62 63, on right: 40


State 0

    0 $accept: . start $end

    markazi  shift, and go to state 1

    start  go to state 2


State 1

    1 start: markazi . LRP RRP COMPOUNDSTATEMENT

    LRP  shift, and go to state 3


State 2

    0 $accept: start . $end

    $end  shift, and go to state 4


State 3

    1 start: markazi LRP . RRP COMPOUNDSTATEMENT

    RRP  shift, and go to state 5


State 4

    0 $accept: start $end .

    $default  accept


State 5

    1 start: markazi LRP RRP . COMPOUNDSTATEMENT

    LCP  shift, and go to state 6

    COMPOUNDSTATEMENT  go to state 7


State 6

   28 COMPOUNDSTATEMENT: LCP . MULTIDECLARATION MULTISTATEMENT RCP

    hindsa     shift, and go to state 8
    chindsa    shift, and go to state 9
    bhindsa    shift, and go to state 10
    jumla      shift, and go to state 11
    booliyayi  shift, and go to state 12
    aasharia   shift, and go to state 13

    BOOLTYPE          go to state 14
    FLOATTYPE         go to state 15
    NUMBERTYPE        go to state 16
    STRINGTYPE        go to state 17
    MULTIDECLARATION  go to state 18
    DECLARATION       go to state 19


State 7

    1 start: markazi LRP RRP COMPOUNDSTATEMENT .

    $default  reduce using rule 1 (start)


State 8

   22 NUMBERTYPE: hindsa .

    $default  reduce using rule 22 (NUMBERTYPE)


State 9

   23 NUMBERTYPE: chindsa .

    $default  reduce using rule 23 (NUMBERTYPE)


State 10

   24 NUMBERTYPE: bhindsa .

    $default  reduce using rule 24 (NUMBERTYPE)


State 11

   25 STRINGTYPE: jumla .

    $default  reduce using rule 25 (STRINGTYPE)


State 12

   18 BOOLTYPE: booliyayi .

    $default  reduce using rule 18 (BOOLTYPE)


State 13

   21 FLOATTYPE: aasharia .

    $default  reduce using rule 21 (FLOATTYPE)


State 14

   39 DECLARATION: BOOLTYPE . identifier EA BOOLOPTIONS semicolon

    identifier  shift, and go to state 20


State 15

   35 DECLARATION: FLOATTYPE . identifier semicolon
   38            | FLOATTYPE . identifier EA decimal semicolon

    identifier  shift, and go to state 21


State 16

   33 DECLARATION: NUMBERTYPE . identifier semicolon
   36            | NUMBERTYPE . identifier EA integer semicolon

    identifier  shift, and go to state 22


State 17

   34 DECLARATION: STRINGTYPE . identifier semicolon
   37            | STRINGTYPE . identifier EA stringliteral semicolon

    identifier  shift, and go to state 23


State 18

   28 COMPOUNDSTATEMENT: LCP MULTIDECLARATION . MULTISTATEMENT RCP

    chalo       shift, and go to state 24
    jabtak      shift, and go to state 25
    agar        shift, and go to state 26
    likho       shift, and go to state 27
    identifier  shift, and go to state 28
    INO         shift, and go to state 29
    DCO         shift, and go to state 30

    INCDECOPERATORS      go to state 31
    MULTISTATEMENT       go to state 32
    STATEMENT            go to state 33
    PRINTSTATEMENT       go to state 34
    SELECTIONSTATEMENT   go to state 35
    IFSTATEMENT          go to state 36
    ITERATIONSTATEMENT   go to state 37
    EXPRESSIONSTATEMENT  go to state 38


State 19

   29 MULTIDECLARATION: DECLARATION . MULTIDECLARATION
   30                 | DECLARATION .

    hindsa     shift, and go to state 8
    chindsa    shift, and go to state 9
    bhindsa    shift, and go to state 10
    jumla      shift, and go to state 11
    booliyayi  shift, and go to state 12
    aasharia   shift, and go to state 13

    $default  reduce using rule 30 (MULTIDECLARATION)

    BOOLTYPE          go to state 14
    FLOATTYPE         go to state 15
    NUMBERTYPE        go to state 16
    STRINGTYPE        go to state 17
    MULTIDECLARATION  go to state 39
    DECLARATION       go to state 19


State 20

   39 DECLARATION: BOOLTYPE identifier . EA BOOLOPTIONS semicolon

    EA  shift, and go to state 40


State 21

   35 DECLARATION: FLOATTYPE identifier . semicolon
   38            | FLOATTYPE identifier . EA decimal semicolon

    semicolon  shift, and go to state 41
    EA         shift, and go to state 42


State 22

   33 DECLARATION: NUMBERTYPE identifier . semicolon
   36            | NUMBERTYPE identifier . EA integer semicolon

    semicolon  shift, and go to state 43
    EA         shift, and go to state 44


State 23

   34 DECLARATION: STRINGTYPE identifier . semicolon
   37            | STRINGTYPE identifier . EA stringliteral semicolon

    semicolon  shift, and go to state 45
    EA         shift, and go to state 46


State 24

   53 ITERATIONSTATEMENT: chalo . LRP integer se integer RRP COMPOUNDSTATEMENT

    LRP  shift, and go to state 47


State 25

   52 ITERATIONSTATEMENT: jabtak . LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT

    LRP  shift, and go to state 48


State 26

   47 IFSTATEMENT: agar . LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT

    LRP  shift, and go to state 49


State 27

   44 PRINTSTATEMENT: likho . LRP stringliteral RRP
   45               | likho . LRP stringliteral comma identifier RRP

    LRP  shift, and go to state 50


State 28

   60 EXPRESSIONSTATEMENT: identifier . ASSIGNMENTOPERATORS identifier semicolon
   61                    | identifier . ASSIGNMENTOPERATORS NUMBERS semicolon
   62                    | identifier . INCDECOPERATORS semicolon

    INO  shift, and go to state 29
    DCO  shift, and go to state 30
    EA   shift, and go to state 51
    AA   shift, and go to state 52
    SA   shift, and go to state 53
    MA   shift, and go to state 54
    DA   shift, and go to state 55

    ASSIGNMENTOPERATORS  go to state 56
    INCDECOPERATORS      go to state 57


State 29

   16 INCDECOPERATORS: INO .

    $default  reduce using rule 16 (INCDECOPERATORS)


State 30

   17 INCDECOPERATORS: DCO .

    $default  reduce using rule 17 (INCDECOPERATORS)


State 31

   63 EXPRESSIONSTATEMENT: INCDECOPERATORS . identifier semicolon

    identifier  shift, and go to state 58


State 32

   28 COMPOUNDSTATEMENT: LCP MULTIDECLARATION MULTISTATEMENT . RCP

    RCP  shift, and go to state 59


State 33

   31 MULTISTATEMENT: STATEMENT . MULTISTATEMENT
   32               | STATEMENT .

    chalo       shift, and go to state 24
    jabtak      shift, and go to state 25
    agar        shift, and go to state 26
    likho       shift, and go to state 27
    identifier  shift, and go to state 28
    INO         shift, and go to state 29
    DCO         shift, and go to state 30

    $default  reduce using rule 32 (MULTISTATEMENT)

    INCDECOPERATORS      go to state 31
    MULTISTATEMENT       go to state 60
    STATEMENT            go to state 33
    PRINTSTATEMENT       go to state 34
    SELECTIONSTATEMENT   go to state 35
    IFSTATEMENT          go to state 36
    ITERATIONSTATEMENT   go to state 37
    EXPRESSIONSTATEMENT  go to state 38


State 34

   43 STATEMENT: PRINTSTATEMENT .

    $default  reduce using rule 43 (STATEMENT)


State 35

   41 STATEMENT: SELECTIONSTATEMENT .

    $default  reduce using rule 41 (STATEMENT)


State 36

   46 SELECTIONSTATEMENT: IFSTATEMENT . ELSEIFSTATEMENT ELSESTATEMENT

    agarwarna  shift, and go to state 61

    $default  reduce using rule 49 (ELSEIFSTATEMENT)

    ELSEIFSTATEMENT  go to state 62


State 37

   42 STATEMENT: ITERATIONSTATEMENT .

    $default  reduce using rule 42 (STATEMENT)


State 38

   40 STATEMENT: EXPRESSIONSTATEMENT .

    $default  reduce using rule 40 (STATEMENT)


State 39

   29 MULTIDECLARATION: DECLARATION MULTIDECLARATION .

    $default  reduce using rule 29 (MULTIDECLARATION)


State 40

   39 DECLARATION: BOOLTYPE identifier EA . BOOLOPTIONS semicolon

    sahih   shift, and go to state 63
    ghalat  shift, and go to state 64

    BOOLOPTIONS  go to state 65


State 41

   35 DECLARATION: FLOATTYPE identifier semicolon .

    $default  reduce using rule 35 (DECLARATION)


State 42

   38 DECLARATION: FLOATTYPE identifier EA . decimal semicolon

    decimal  shift, and go to state 66


State 43

   33 DECLARATION: NUMBERTYPE identifier semicolon .

    $default  reduce using rule 33 (DECLARATION)


State 44

   36 DECLARATION: NUMBERTYPE identifier EA . integer semicolon

    integer  shift, and go to state 67


State 45

   34 DECLARATION: STRINGTYPE identifier semicolon .

    $default  reduce using rule 34 (DECLARATION)


State 46

   37 DECLARATION: STRINGTYPE identifier EA . stringliteral semicolon

    stringliteral  shift, and go to state 68


State 47

   53 ITERATIONSTATEMENT: chalo LRP . integer se integer RRP COMPOUNDSTATEMENT

    integer  shift, and go to state 69


State 48

   52 ITERATIONSTATEMENT: jabtak LRP . LOGICALEXPRESSION RRP COMPOUNDSTATEMENT

    sahih       shift, and go to state 63
    ghalat      shift, and go to state 64
    identifier  shift, and go to state 70
    integer     shift, and go to state 71
    LRP         shift, and go to state 72
    NOT         shift, and go to state 73

    NOTOPERATOR           go to state 74
    BOOLOPTIONS           go to state 75
    LOGICALEXPRESSION     go to state 76
    RELATIONALEXPRESSION  go to state 77


State 49

   47 IFSTATEMENT: agar LRP . LOGICALEXPRESSION RRP COMPOUNDSTATEMENT

    sahih       shift, and go to state 63
    ghalat      shift, and go to state 64
    identifier  shift, and go to state 70
    integer     shift, and go to state 71
    LRP         shift, and go to state 72
    NOT         shift, and go to state 73

    NOTOPERATOR           go to state 74
    BOOLOPTIONS           go to state 75
    LOGICALEXPRESSION     go to state 78
    RELATIONALEXPRESSION  go to state 77


State 50

   44 PRINTSTATEMENT: likho LRP . stringliteral RRP
   45               | likho LRP . stringliteral comma identifier RRP

    stringliteral  shift, and go to state 79


State 51

    2 ASSIGNMENTOPERATORS: EA .

    $default  reduce using rule 2 (ASSIGNMENTOPERATORS)


State 52

    5 ASSIGNMENTOPERATORS: AA .

    $default  reduce using rule 5 (ASSIGNMENTOPERATORS)


State 53

    6 ASSIGNMENTOPERATORS: SA .

    $default  reduce using rule 6 (ASSIGNMENTOPERATORS)


State 54

    3 ASSIGNMENTOPERATORS: MA .

    $default  reduce using rule 3 (ASSIGNMENTOPERATORS)


State 55

    4 ASSIGNMENTOPERATORS: DA .

    $default  reduce using rule 4 (ASSIGNMENTOPERATORS)


State 56

   60 EXPRESSIONSTATEMENT: identifier ASSIGNMENTOPERATORS . identifier semicolon
   61                    | identifier ASSIGNMENTOPERATORS . NUMBERS semicolon

    identifier  shift, and go to state 80
    decimal     shift, and go to state 81
    integer     shift, and go to state 82

    NUMBERS  go to state 83


State 57

   62 EXPRESSIONSTATEMENT: identifier INCDECOPERATORS . semicolon

    semicolon  shift, and go to state 84


State 58

   63 EXPRESSIONSTATEMENT: INCDECOPERATORS identifier . semicolon

    semicolon  shift, and go to state 85


State 59

   28 COMPOUNDSTATEMENT: LCP MULTIDECLARATION MULTISTATEMENT RCP .

    $default  reduce using rule 28 (COMPOUNDSTATEMENT)


State 60

   31 MULTISTATEMENT: STATEMENT MULTISTATEMENT .

    $default  reduce using rule 31 (MULTISTATEMENT)


State 61

   48 ELSEIFSTATEMENT: agarwarna . LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT

    LRP  shift, and go to state 86


State 62

   46 SELECTIONSTATEMENT: IFSTATEMENT ELSEIFSTATEMENT . ELSESTATEMENT

    warna  shift, and go to state 87

    $default  reduce using rule 51 (ELSESTATEMENT)

    ELSESTATEMENT  go to state 88


State 63

   19 BOOLOPTIONS: sahih .

    $default  reduce using rule 19 (BOOLOPTIONS)


State 64

   20 BOOLOPTIONS: ghalat .

    $default  reduce using rule 20 (BOOLOPTIONS)


State 65

   39 DECLARATION: BOOLTYPE identifier EA BOOLOPTIONS . semicolon

    semicolon  shift, and go to state 89


State 66

   38 DECLARATION: FLOATTYPE identifier EA decimal . semicolon

    semicolon  shift, and go to state 90


State 67

   36 DECLARATION: NUMBERTYPE identifier EA integer . semicolon

    semicolon  shift, and go to state 91


State 68

   37 DECLARATION: STRINGTYPE identifier EA stringliteral . semicolon

    semicolon  shift, and go to state 92


State 69

   53 ITERATIONSTATEMENT: chalo LRP integer . se integer RRP COMPOUNDSTATEMENT

    se  shift, and go to state 93


State 70

   57 RELATIONALEXPRESSION: identifier . RELATIONALOPERATORS integer

    LT   shift, and go to state 94
    LTE  shift, and go to state 95
    GT   shift, and go to state 96
    GTE  shift, and go to state 97
    IEQ  shift, and go to state 98
    NEQ  shift, and go to state 99

    RELATIONALOPERATORS  go to state 100


State 71

   58 RELATIONALEXPRESSION: integer . RELATIONALOPERATORS integer

    LT   shift, and go to state 94
    LTE  shift, and go to state 95
    GT   shift, and go to state 96
    GTE  shift, and go to state 97
    IEQ  shift, and go to state 98
    NEQ  shift, and go to state 99

    RELATIONALOPERATORS  go to state 101


State 72

   54 LOGICALEXPRESSION: LRP . RELATIONALEXPRESSION RRP LOGICALOPERATORS LRP RELATIONALEXPRESSION RRP

    sahih       shift, and go to state 63
    ghalat      shift, and go to state 64
    identifier  shift, and go to state 70
    integer     shift, and go to state 71

    BOOLOPTIONS           go to state 75
    RELATIONALEXPRESSION  go to state 102


State 73

   15 NOTOPERATOR: NOT .

    $default  reduce using rule 15 (NOTOPERATOR)


State 74

   55 LOGICALEXPRESSION: NOTOPERATOR . LRP RELATIONALEXPRESSION RRP

    LRP  shift, and go to state 103


State 75

   59 RELATIONALEXPRESSION: BOOLOPTIONS .

    $default  reduce using rule 59 (RELATIONALEXPRESSION)


State 76

   52 ITERATIONSTATEMENT: jabtak LRP LOGICALEXPRESSION . RRP COMPOUNDSTATEMENT

    RRP  shift, and go to state 104


State 77

   56 LOGICALEXPRESSION: RELATIONALEXPRESSION .

    $default  reduce using rule 56 (LOGICALEXPRESSION)


State 78

   47 IFSTATEMENT: agar LRP LOGICALEXPRESSION . RRP COMPOUNDSTATEMENT

    RRP  shift, and go to state 105


State 79

   44 PRINTSTATEMENT: likho LRP stringliteral . RRP
   45               | likho LRP stringliteral . comma identifier RRP

    comma  shift, and go to state 106
    RRP    shift, and go to state 107


State 80

   60 EXPRESSIONSTATEMENT: identifier ASSIGNMENTOPERATORS identifier . semicolon

    semicolon  shift, and go to state 108


State 81

   27 NUMBERS: decimal .

    $default  reduce using rule 27 (NUMBERS)


State 82

   26 NUMBERS: integer .

    $default  reduce using rule 26 (NUMBERS)


State 83

   61 EXPRESSIONSTATEMENT: identifier ASSIGNMENTOPERATORS NUMBERS . semicolon

    semicolon  shift, and go to state 109


State 84

   62 EXPRESSIONSTATEMENT: identifier INCDECOPERATORS semicolon .

    $default  reduce using rule 62 (EXPRESSIONSTATEMENT)


State 85

   63 EXPRESSIONSTATEMENT: INCDECOPERATORS identifier semicolon .

    $default  reduce using rule 63 (EXPRESSIONSTATEMENT)


State 86

   48 ELSEIFSTATEMENT: agarwarna LRP . LOGICALEXPRESSION RRP COMPOUNDSTATEMENT

    sahih       shift, and go to state 63
    ghalat      shift, and go to state 64
    identifier  shift, and go to state 70
    integer     shift, and go to state 71
    LRP         shift, and go to state 72
    NOT         shift, and go to state 73

    NOTOPERATOR           go to state 74
    BOOLOPTIONS           go to state 75
    LOGICALEXPRESSION     go to state 110
    RELATIONALEXPRESSION  go to state 77


State 87

   50 ELSESTATEMENT: warna . COMPOUNDSTATEMENT

    LCP  shift, and go to state 6

    COMPOUNDSTATEMENT  go to state 111


State 88

   46 SELECTIONSTATEMENT: IFSTATEMENT ELSEIFSTATEMENT ELSESTATEMENT .

    $default  reduce using rule 46 (SELECTIONSTATEMENT)


State 89

   39 DECLARATION: BOOLTYPE identifier EA BOOLOPTIONS semicolon .

    $default  reduce using rule 39 (DECLARATION)


State 90

   38 DECLARATION: FLOATTYPE identifier EA decimal semicolon .

    $default  reduce using rule 38 (DECLARATION)


State 91

   36 DECLARATION: NUMBERTYPE identifier EA integer semicolon .

    $default  reduce using rule 36 (DECLARATION)


State 92

   37 DECLARATION: STRINGTYPE identifier EA stringliteral semicolon .

    $default  reduce using rule 37 (DECLARATION)


State 93

   53 ITERATIONSTATEMENT: chalo LRP integer se . integer RRP COMPOUNDSTATEMENT

    integer  shift, and go to state 112


State 94

    8 RELATIONALOPERATORS: LT .

    $default  reduce using rule 8 (RELATIONALOPERATORS)


State 95

   10 RELATIONALOPERATORS: LTE .

    $default  reduce using rule 10 (RELATIONALOPERATORS)


State 96

    7 RELATIONALOPERATORS: GT .

    $default  reduce using rule 7 (RELATIONALOPERATORS)


State 97

    9 RELATIONALOPERATORS: GTE .

    $default  reduce using rule 9 (RELATIONALOPERATORS)


State 98

   11 RELATIONALOPERATORS: IEQ .

    $default  reduce using rule 11 (RELATIONALOPERATORS)


State 99

   12 RELATIONALOPERATORS: NEQ .

    $default  reduce using rule 12 (RELATIONALOPERATORS)


State 100

   57 RELATIONALEXPRESSION: identifier RELATIONALOPERATORS . integer

    integer  shift, and go to state 113


State 101

   58 RELATIONALEXPRESSION: integer RELATIONALOPERATORS . integer

    integer  shift, and go to state 114


State 102

   54 LOGICALEXPRESSION: LRP RELATIONALEXPRESSION . RRP LOGICALOPERATORS LRP RELATIONALEXPRESSION RRP

    RRP  shift, and go to state 115


State 103

   55 LOGICALEXPRESSION: NOTOPERATOR LRP . RELATIONALEXPRESSION RRP

    sahih       shift, and go to state 63
    ghalat      shift, and go to state 64
    identifier  shift, and go to state 70
    integer     shift, and go to state 71

    BOOLOPTIONS           go to state 75
    RELATIONALEXPRESSION  go to state 116


State 104

   52 ITERATIONSTATEMENT: jabtak LRP LOGICALEXPRESSION RRP . COMPOUNDSTATEMENT

    LCP  shift, and go to state 6

    COMPOUNDSTATEMENT  go to state 117


State 105

   47 IFSTATEMENT: agar LRP LOGICALEXPRESSION RRP . COMPOUNDSTATEMENT

    LCP  shift, and go to state 6

    COMPOUNDSTATEMENT  go to state 118


State 106

   45 PRINTSTATEMENT: likho LRP stringliteral comma . identifier RRP

    identifier  shift, and go to state 119


State 107

   44 PRINTSTATEMENT: likho LRP stringliteral RRP .

    $default  reduce using rule 44 (PRINTSTATEMENT)


State 108

   60 EXPRESSIONSTATEMENT: identifier ASSIGNMENTOPERATORS identifier semicolon .

    $default  reduce using rule 60 (EXPRESSIONSTATEMENT)


State 109

   61 EXPRESSIONSTATEMENT: identifier ASSIGNMENTOPERATORS NUMBERS semicolon .

    $default  reduce using rule 61 (EXPRESSIONSTATEMENT)


State 110

   48 ELSEIFSTATEMENT: agarwarna LRP LOGICALEXPRESSION . RRP COMPOUNDSTATEMENT

    RRP  shift, and go to state 120


State 111

   50 ELSESTATEMENT: warna COMPOUNDSTATEMENT .

    $default  reduce using rule 50 (ELSESTATEMENT)


State 112

   53 ITERATIONSTATEMENT: chalo LRP integer se integer . RRP COMPOUNDSTATEMENT

    RRP  shift, and go to state 121


State 113

   57 RELATIONALEXPRESSION: identifier RELATIONALOPERATORS integer .

    $default  reduce using rule 57 (RELATIONALEXPRESSION)


State 114

   58 RELATIONALEXPRESSION: integer RELATIONALOPERATORS integer .

    $default  reduce using rule 58 (RELATIONALEXPRESSION)


State 115

   54 LOGICALEXPRESSION: LRP RELATIONALEXPRESSION RRP . LOGICALOPERATORS LRP RELATIONALEXPRESSION RRP

    AND  shift, and go to state 122
    OR   shift, and go to state 123

    LOGICALOPERATORS  go to state 124


State 116

   55 LOGICALEXPRESSION: NOTOPERATOR LRP RELATIONALEXPRESSION . RRP

    RRP  shift, and go to state 125


State 117

   52 ITERATIONSTATEMENT: jabtak LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT .

    $default  reduce using rule 52 (ITERATIONSTATEMENT)


State 118

   47 IFSTATEMENT: agar LRP LOGICALEXPRESSION RRP COMPOUNDSTATEMENT .

    $default  reduce using rule 47 (IFSTATEMENT)


State 119

   45 PRINTSTATEMENT: likho LRP stringliteral comma identifier . RRP

    RRP  shift, and go to state 126


State 120

   48 ELSEIFSTATEMENT: agarwarna LRP LOGICALEXPRESSION RRP . COMPOUNDSTATEMENT

    LCP  shift, and go to state 6

    COMPOUNDSTATEMENT  go to state 127


State 121

   53 ITERATIONSTATEMENT: chalo LRP integer se integer RRP . COMPOUNDSTATEMENT

    LCP  shift, and go to state 6

    COMPOUNDSTATEMENT  go to state 128


State 122

   13 LOGICALOPERATORS: AND .

    $default  reduce using rule 13 (LOGICALOPERATORS)


State 123

   14 LOGICALOPERATORS: OR .

    $default  reduce using rule 14 (LOGICALOPERATORS)


State 124

   54 LOGICALEXPRESSION: LRP RELATIONALEXPRESSION RRP LOGICALOPERATORS . LRP RELATIONALEXPRESSION RRP

    LRP  shift, and go to state 129


State 125

   55 LOGICALEXPRESSION: NOTOPERATOR LRP RELATIONALEXPRESSION RRP .

    $default  reduce using rule 55 (LOGICALEXPRESSION)


State 126
